--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://joshbail070:kKjnPyPQl8ZixOEE@practi1.k2cjm.mongodb.net/practi1?retryWrites=true&w=majority&appName=practi1"
+MONGODB_URI="mongodb+srv://joshbail070:efef@practi1.k2cjm.mongodb.net/practi1?retryWrites=true&w=majority&appName=practi1"
